--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,6 @@
 <html>
-<head  ></head>
-    <title>CONTACT ME</title><link	href=	"styles.css"	rel="stylesheet"	type="text/css"/>
+<head  ><link rel="shortcut icon" type="image/x-icon" href="bitbug_favicon.ico" />
+    <title>CONTACT ME</title><link	href=	"styles.css"	rel="stylesheet"	type="text/css"/></head>
     <body>
         <h4>
     <a href="index.html">HOME</a> &ensp;|&ensp;
