--- a/gallery.html
+++ b/gallery.html
@@ -1,6 +1,6 @@
 <html>
 <head><link rel="shortcut icon" type="image/x-icon" href="bitbug_favicon.ico" />
-    <title>GALLERY</title>
+    <title>GALLERY</title></head>
     <body>
     <link	href=	"styles.css"	rel="stylesheet"	type="text/css"/>
     
