--- a/aboutme.html
+++ b/aboutme.html
@@ -1,7 +1,7 @@
 <html>
 <head><link rel="shortcut icon" type="image/x-icon" href="bitbug_favicon.ico" />    
 
-    <title>ABOUT ME</title>
+    <title>ABOUT ME</title></head>
     
     <link	href=	"styles.css"	rel="stylesheet"	type="text/css"/>
         
