--- a/aboutme.html
+++ b/aboutme.html
@@ -1,5 +1,5 @@
 <html>
-<head><link rel="shortcut icon" type="image/x-icon" href="bitbug_favicon.ico" />    
+<head><link rel="shortcut icon" type="image/x-icon" href="2.ico" />    
 
     <title>ABOUT ME</title></head>
     
