--- a/gallery.html
+++ b/gallery.html
@@ -1,5 +1,5 @@
 <html>
-<head><link rel="shortcut icon" type="image/x-icon" href="bitbug_favicon.ico" />
+<head><link rel="shortcut icon" type="image/x-icon" href="2.ico" />
     <title>GALLERY</title></head>
     <body>
     <link	href=	"styles.css"	rel="stylesheet"	type="text/css"/>
