--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <link rel="shortcut icon" type="image/x-icon" href="bitbug_favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="2.ico" />
     <title>WENLI'S HOME PAGE</title>
     </head>
 <link	href=	"styles.css"	rel="stylesheet"	type="text/css"/>
