--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <h4>
     <a href="index.html">HOME</a> &ensp;|&ensp;
     <a href="aboutme.html">ABOUT ME</a>  &ensp; |&ensp;
-    <a href="Gallery.html">GALLERY</a> &ensp; |&ensp;
-     <a href="Contect.html">CONTACT</a>
+    <a href="gallery.html">GALLERY</a> &ensp; |&ensp;
+     <a href="contact.html">CONTACT</a>
             </h4>
         
             
