--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 <html>
-<head>
+<head><link rel="shortcut icon" type="image/x-icon" href="2.ico" />
     <title>WENLI KUANG'S ARTWORK</title></head><body>
     
 <link	href=	"styles.css"	rel="stylesheet"	type="text/css"/>
