--- a/gallery.html
+++ b/gallery.html
@@ -46,6 +46,10 @@
     <p><font color=white>Final project for my MMP class.I made this short video in order to call people's attention on protecting animals. I used Photoshop, Sai and After Effects to make this animation.</font></p>
    <center><video controls width="33%" height="400" src="Comp%201%204-1-1-1.m4v"></video></center>
         <hr>
+       <center> <h1><font color=white>After Effects Practice Collection 2020</font></h1></center> 
+        <p><font color=white>The collection of my After Effects work in 2020</font></p>
+      <center> <iframe width="560" height="315" src="https://www.youtube.com/embed/mWYwfQycwOc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center> 
+    
         
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
